yarn add express

--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
   "name": "2025_2w_api_blogs",
-  "packageManager": "yarn@4.9.2"
+  "packageManager": "yarn@4.9.2",
+  "dependencies": {
+    "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
