--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "2025_2w_api_blogs",
   "packageManager": "yarn@4.9.2",
+  "scripts": {
+    "dev": "nodemon --inspect dist/index.js",
+    "watch": "tsc -w"
+  },
   "dependencies": {
     "express": "^5.1.0"
   },
